trying to fix gap between form and results

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@
 
 html,
 body {
+  width: 100%;
+  height: 100vh;
   background-color: black;
   padding: 0;
   margin: 0;
@@ -40,6 +42,10 @@ h1 {
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.title {
+  font-size: 8rem;
 }
 
 input {
@@ -82,6 +88,11 @@ input:focus {
 .btn:hover, .button:hover {
   background: rgba(0,255,255,0.5);
   color: #0f0f0f;
+}
+
+.icon {
+  margin-right: 2px;
+  font-size: 2rem;;
 }
 
 .card {
